# fund_sysprog

./: .gitignore  CMakeLists.txt
logger/client_logger/: CMakeLists.txt
logger/client_logger/include/: client_logger.h  client_logger_builder.h
logger/client_logger/src/: client_logger.cpp  client_logger_builder.cpp
logger/client_logger/tests/: client_logger_tests.cpp
logger/client_logger/tests/log/: set.json
logger/logger/include/: logger_builder.h
logger/server_logger/include/: server_logger_builder.h
logger/server_logger/src/: server_logger_builder.cpp
